added success stories

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     </ul>
     <button class="evaluation-button" onclick="window.location.href='form.html'">Free Evaluation</button>
   </nav>
+  <div id="success">
+    <h1> SUCCESS STORIES</h1>
+    <h3><p>Case Summaries of our featured Approveals*</p>
+    <p>6+ Approved EB_2 NIW Case 98% NIW Success Rate</p></H3>
+  </div>
 
   <!-- Hero Section -->
   <div class="hero-section">
