--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
   <!-- Hero Section -->
   <div class="hero-section">
     <div style="background-color: cadetblue;">
-      <h1>DAVID ALLEN</h1>
-      <p>Attorney | High-Skilled Immigration</p>
+      <h1>RA Comsulting</h1>
+      <p>Anowar Sahadat | High-Skilled Immigration</p>
     </div>
   </div>
 
