footer coloure changed

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
   <!-- Hero Section -->
   <div class="hero-section">
     <div style="background-color: cadetblue;">
-      <h1>RA Comsulting</h1>
-      <p>Anowar Sahadat | High-Skilled Immigration</p>
+      <h1>RA Consulting</h1>
+      <p>Anowar Shahadat | High-Skilled Immigration</p>
     </div>
   </div>
 
@@ -235,7 +235,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 RA Consulting. All rights reserved.</p>
+    <p>&copy; 2024 RA Consulting. All rights reserved. <br>Arman</p>
   </footer>
 
 </body>
